--- a/index.html
+++ b/index.html
@@ -1,28 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | QR code component</title>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      body {
+        align-content: center;
+        align-items: center;
+        background-color: hsl(212, 45%, 89%);
+        display: flex;
+        flex-direction: column;
+        font-family: 'Outfit', Arial, Helvetica, sans-serif;
+        font-size: 15px;
+        justify-content: center;
+        margin-top: 24%;
+      }
+      h1 {
+        color: hsl(218, 44%, 22%);
+        line-height: 26px;
+        margin: 0 16px;
+        font-size: 22px;
+      }
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+      .container {
+        background-color: white;
+        border-radius: 20px;
+        height: 499px;
+        margin-bottom: 10px;
+        text-align: center;
+        width: 320px;
+      }
+      .nowrap {
+        text-wrap: nowrap;
+      }
+      .slate300 {
+        color: hsl(212, 45%, 89%);
+      }
+      .slate500 {
+        color: hsl(216, 15%, 48%);
+      }
+      .slate900 {
+        color: hsl(218, 44%, 22%);
+      }
+      .qr-code {
+        height: 288px;
+        margin: 16px;
+        border-radius: 10px;
+        width: 288px;
+      }
+      .qr-text {
+        color: hsl(216, 15%, 48%);
+        height: 131px;
+        line-height: 22px;
+        margin: 0 auto;
+        margin-top: 6px;
+        width: 288px;
+      }
+      .qr-text p {
+        padding: 0 5px;
+        word-spacing: 1px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <img class="qr-code" src="./images/image-qr-code.png"></img>
+      <div class="qr-text">
+        <h1>Improve your front-end<br><span class="nowrap">skills by building projects</span></h1>
+        <p>Scan the QR code to visit
+        Frontend Mentor and take your coding skills to<br>the next level</p>
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/brandtrock/fem-qr-code">Brandt J</a>.
+    </div>
+  </body>
 </html>
