--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 
     <title>Frontend Mentor | QR code component</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       body {
+        align-content: center;
+        align-items: center;
         background-color: hsl(212, 45%, 89%); /* slate 300 */
+        display: flex;
+        flex-direction: column;
         font-family: 'Outfit', Arial, Helvetica, sans-serif;
         font-size: 15px;
+        justify-content: center;
+        height: 960px;
+        width: 100%;
       }
       h1 {
         color: hsl(218, 44%, 22%); /* slate 900 */
@@ -34,28 +40,11 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-      .content {
-        align-content: center;
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        height: 960px;
-        width: 100%;
-      }
       .qr-code {
         height: 288px;
         margin: 16px;
         border-radius: 10px;
         width: 288px;
-      }
-      .qr_container {
-        background-color: white;
-        border-radius: 20px;
-        height: 499px;
-        margin-bottom: 10px;
-        text-align: center;
-        width: 320px;
       }
       .qr-text {
         color: hsl(216, 15%, 48%); /* slate 500 */
@@ -69,24 +58,30 @@
         padding: 0 5px;
         word-spacing: 1px;
       }
+      .qr-wrapper {
+        background-color: white;
+        border-radius: 20px;
+        height: 499px;
+        margin-bottom: 10px;
+        text-align: center;
+        width: 320px;
+      }
     </style>
   </head>
   <body>
-    <div class="content">
-      <div class="qr_container">
-        <img class="qr-code" src="./images/image-qr-code.png"></img>
-        <div class="qr-text">
-          <h1>Improve your front-end<br>skills by building projects</h1>
-          <p>Scan the QR code to visit
-          Frontend<br>Mentor and take your coding skills to<br>the next level</p>
-        </div>
-      </div>
-      <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="https://github.com/brandtrock/fem-qr-code">Brandt J</a>.
-      </div>
-    </div>
+    <main class="qr-wrapper">
+      <img class="qr-code" src="./images/image-qr-code.png"></img>
+      <section class="qr-text">
+        <h1>Improve your front-end<br>skills by building projects</h1>
+        <p>Scan the QR code to visit
+        Frontend<br>Mentor and take your coding skills to<br>the next level</p>
+      </section>
+    </main>
+    <footer class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="https://github.com/brandtrock/fem-qr-code">Brandt J</a>.
+    </footer>
   </body>
 </html>
